--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -5,13 +5,14 @@
     </head>
     <body>
         
-        <div class="container">
-            <div class="nav"></div>
+        <div id="container">
 
-            <button>home</button>
-            <button>menu</button>
-            <button>profile</button>
-            <button>login</button>
+
+            <div class=" home">home</div>
+            <div class=" menu1">menu</div>
+            <div class=" profile">profile</div>
+            <div class=" login">login</div>
+
 
         </div>
 
