--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -8,10 +8,10 @@
         <div id="container">
 
 
-            <div class=" home">home
-            <div class=" menu1">menu
-            <div class=" profile">profile
-            <div class=" login">login
+            <div class=" home">home</div>
+            <div class=" menu1">menu</div>
+            <div class=" profile">profile</div>
+            <div class=" login">login</div>
 
 
         </div>
