--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="CSS/.CSS">
+        <link rel="stylesheet" href="css/style.css">
         <title>Personal Web</title>
     </head>
     <body>
