persona web update

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class=" profile"><button>Profile</button></div>
             <div class=" login"><button>LOGIN</button></div>
             <div class="strip">-</div>
+            <div class="nama">nama saya</div>
 
         </div>
         
