--- a/index2.html
+++ b/index2.html
@@ -21,10 +21,10 @@
 
          <nav class="navbar">
  
-              <a href="menu">Menu</a>
-              <a href="profile">Profile</a>
-              <a href="contact">Contact</a>
-              <a href="login" class ="active">LOGIN</a></button>
+              <a href="#home">Menu</a>
+              <a href="#about">Profile</a>
+              <a href="#contact">Contact</a>
+              <a href="#login" class ="active">LOGIN</a></button>
          </nav>
 
      </header>
@@ -46,8 +46,32 @@
              <img src=c:\Users\Albah\Downloads\foto.png></div>       
      </section>
 
+     <section class="about" id="about">
+            <div class="about-img">
+                <img src=c:\Users\Albah\Downloads\foto.png></div>       
+            </div>
+
+            <div class="about-content">
+                <h2 class="heading">My<span>Profile</span></h2>
+                <h3>Illustator</h3>
+                <p>The Great Illustator Ever, I am also a freelancer who works in the field of digital art. I can also design and create beautiful illustrations
+                </p>
+                <a href="#" class="btn">Read More</a>
+
+            </div>
+     </section>
 
 
+     <section class="service" id="service">
+        <h2 class="heading">Our<span>Service</span></h2>
+        
+        <div class="service-container"></div>
+            <div class="service-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Iluustator</h3>
+                <p>The Great Illustator Ever, I am also a freelancer who works in the field of digital art. I can also design and create beautiful illustrations
+                </div>
+     </section>
 
     </body>
 </html>
