--- a/tugas kemerdekaan/indexclosing.html
+++ b/tugas kemerdekaan/indexclosing.html
@@ -37,7 +37,7 @@
 
                 <h1>Bersama</h1>
                 <h2>Membangun Negeri</h2>
-                <a href="#"><b>Home</b></a>
+                <a href="indexutama.html"><b>Home</b></a>
 
 
             </div>
