--- a/tugas kemerdekaan/indexlogin.html
+++ b/tugas kemerdekaan/indexlogin.html
@@ -29,6 +29,8 @@
         <div class="pembungkus">
             <div class="logreg-kotak">
                 <div class="form-box login">
+                    <div class="logreg-judul">
+
                      <h2>Login</h2>
                      <p>Login Terlebih Dahulu Untuk Mempelajari Sejarah</p>
         
@@ -41,8 +43,28 @@
                 <label>Email</label>
               </div>
 
-              <div class="in">
+              <div class="kotak-input">
+                <span class="icon"><i class='bx bxs-lock-alt'></i></span>
+                <input type="email" required>
+                <label>Password</label>
+              </div>
 
+              <div class="kotak-cek">
+                <label><input type="checkbox">Ingat Password
+                </label>
+                <a href="#">Lupa Password?</a>
+                </div>
+
+                <button type="submit" class="btn">Login</button>
+              
+
+              <div class="logreg-link">
+                <p>Masih Belum Punya Akun?<a href="#" class="daftar">Daftar                
+                </a></p>
+
+                <button type="submit" class="btn-daftar">Daftar</button>
+
+                </div>
 
 
               </div>
